fixes buttons on iphones

--- a/site/public/css/global.css
+++ b/site/public/css/global.css
@@ -154,3 +154,7 @@ footer .footer-separator {
 #loading-bar-percentage{
     margin-left: 10px;
 }
+
+input{
+  -webkit-appearance: none;
+}
